# ChangeLog for dev-util/diffstat
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/diffstat/ChangeLog,v 1.68 2009/02/25 20:56:40 josejx Exp $

  25 Feb 2009; Joseph Jezak <josejx@gentoo.org> diffstat-1.46.ebuild:
  Marked ppc/ppc64 stable for bug #260012.

  24 Feb 2009; Thomas Anderson <gentoofan23@gentoo.org>
  diffstat-1.46.ebuild:
  stable amd64, bug 260012

  23 Feb 2009; Raúl Porcel <armin76@gentoo.org> diffstat-1.46.ebuild:
  alpha/arm/ia64/s390/sh/sparc/x86 stable

*diffstat-1.46 (04 Sep 2008)

  04 Sep 2008; Sven Wegener <swegener@gentoo.org> +diffstat-1.46.ebuild:
  Version bump.

  24 Dec 2007; Brent Baude <ranger@gentoo.org> diffstat-1.45.ebuild:
  marking diffstat-1.45 ppc64 for bug 197392

  21 Dec 2007; Samuli Suominen <drac@gentoo.org> diffstat-1.45.ebuild:
  amd64 stable wrt #197392

  21 Dec 2007; nixnut <nixnut@gentoo.org> diffstat-1.45.ebuild:
  Stable on ppc wrt bug 197392

  17 Dec 2007; Raúl Porcel <armin76@gentoo.org> diffstat-1.45.ebuild:
  alpha/ia64/sparc/x86 stable

  11 Oct 2007; Sven Wegener <swegener@gentoo.org> diffstat-1.43.ebuild,
  diffstat-1.45.ebuild:
  Switch to make install, diffutils is only a runtime dependency.

*diffstat-1.45 (25 Sep 2007)

  25 Sep 2007; Sven Wegener <swegener@gentoo.org> +diffstat-1.45.ebuild:
  Version bump.

  19 Mar 2007; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove ka0ttic from metadata.xml due to retirement.

  22 Jan 2007; Sven Wegener <swegener@gentoo.org> -diffstat-1.40.ebuild,
  -diffstat-1.41.ebuild:
  Cleanup.

  21 Jan 2007; Alexander H. Færøy <eroyf@gentoo.org> diffstat-1.43.ebuild:
  Stable on MIPS; bug #155304.

  04 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> diffstat-1.43.ebuild:
  Stable on Alpha, bug 155304.

  03 Dec 2006; Tim Yamin <plasmaroo@gentoo.org> diffstat-1.43.ebuild:
  Stable on IA64; bug #155304.

  17 Nov 2006; Steve Dibb <beandog@gentoo.org> diffstat-1.43.ebuild:
  amd64 stable, bug 155304
