@@ -2,8 +2,10 @@ AUX diffstat-1.37-hard-locale.patch 578 RMD160 8e5e6c752b4758c7f143a59a43a02dde5
 DIST diffstat-1.43.tgz 100862 RMD160 3b970ebfebc7216c274b939e03463b67bb491dd5 SHA1 fcd9c1edb9e5b71b687d39b1d193e77b9ba4cd2f SHA256 87d62ac0fecfc2d0203a62b23a23416fcac07a6e95718254a8a53135b1810372
 DIST diffstat-1.45.tgz 104706 RMD160 4438f3a6ac709ee7bb08ce14220dfcfa4697fa15 SHA1 5801ed764eee00f3c81be7f6995670962aad7467 SHA256 5b5b0786832da634b915c04085285a21c67c2b39c88c6afd63533659d60cb07b
 DIST diffstat-1.46.tgz 106551 RMD160 329c222babf81e742548f1d838bd42a97b48b9e0 SHA1 7cc31a16596de4ebe372e8a753333dd3ec2b577a SHA256 083cf3a5f49672e79c31f37dcd5c4e5e4ea354c8da7e6d12e12b0ea8fd5725ae
+DIST diffstat-1.47.tgz 106801 RMD160 b0dde03005b3f77a3d55fa509c3ee9778fb1cc29 SHA1 f20672dd2692f4b89d84da857bbe6bf7853ee573 SHA256 0c398b749574b6bd54f5c5ac1d71118400cd54791e2f47a96a1ad07915d22832
 EBUILD diffstat-1.43.ebuild 787 RMD160 107df0fe6e10155e3f2e04b0db3be8b983a33061 SHA1 953ba8464dae85ee7a6bdcf0c6eea8c7caa9c2de SHA256 77c24cbcc41f08278f41a20088593c617d8912d5b358de669e7057637cfa4631
 EBUILD diffstat-1.45.ebuild 794 RMD160 72c7f250850f5e574d6766fa753f6b9f29da79cc SHA1 823975b9d678d63a169820319a48d27bd373f0ff SHA256 07973740bb40abbe3c344c633b72d41f119e229f3e259cffaf75491bd9e83047
 EBUILD diffstat-1.46.ebuild 807 RMD160 6596a97ffb28acce54379fa338e49a08c96b70bd SHA1 85d761312dcef6b0c3eb10ab6832acc0a36b9be1 SHA256 9b5cc102311f797a807cd636d62d5cf855604f541e627a25bb124084cba8fda6
-MISC ChangeLog 8093 RMD160 a2d8b2673cda77a89d213b6e9ffae0f05fef2d9f SHA1 3ec54371b0e7e187d2f34692b4c605cd645c2c8f SHA256 4ba03d2548e6b75bea401e5108a40468a161be7367ce20c1de9105a96e7d9091
+EBUILD diffstat-1.47.ebuild 807 RMD160 f514ca1f02f8bae4ecfd4f0b56a5f32f8ca98006 SHA1 ed8a9a310738095c3e65ef0a9e1d58eba4e58d2f SHA256 99a422dcffb864094b8f194374a94c92349e8dc23650906c4331a1e482088b95
+MISC ChangeLog 8210 RMD160 25fa2516a7e7850be37980605e4c50e576b1b1fc SHA1 60a9eb50602bd42e5753f2b03744c16bb62486e7 SHA256 06308a42c84ce7bdfeba04fd294bb89ae7e26bf199007af9c0bfec41ccc0298e
 MISC metadata.xml 165 RMD160 c4557a3518a065b077539be5a0f20e4735fc2141 SHA1 1831705b1eb97b63968fc9eef31aa904a69a854a SHA256 75ca85c472d4181ae0de529c83826baaebe75d9e750ee6621758b5096bceffcd
