@@ -1,0 +1,28 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/diffstat/diffstat-1.47.ebuild,v 1.1 2009/04/12 20:17:00 tcunha Exp $
+
+inherit eutils
+
+DESCRIPTION="creates a histogram from a diff of the insertions, deletions, and modifications per-file"
+HOMEPAGE="http://invisible-island.net/diffstat/diffstat.html"
+SRC_URI="ftp://invisible-island.net/${PN}/${P}.tgz"
+
+LICENSE="as-is"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~x86-solaris"
+IUSE=""
+
+DEPEND=""
+RDEPEND="sys-apps/diffutils"
+
+src_unpack() {
+	unpack ${A}
+	cd "${S}"
+	epatch "${FILESDIR}"/${PN}-1.37-hard-locale.patch
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die "emake install failed"
+	dodoc README CHANGES
+}
